--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Jason Kalwa
+email: jason@jasonkalwa.com
+description: > # Jason should probably write something here.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.jasonkalwa.com" # the base hostname & protocol for your site
+twitter_username: jasonkalwa
+github_username:  jasonkalwa
+facebook_username: jasonkalwa
 
 # Build settings
 markdown: kramdown
